# nanobot_runtime

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: CODING_RULES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: operations.md  refactor-plan.md  setup.md
docs/faq/: channels.md  env-vars.md  hooks.md  pitfalls.md  tts-pipeline.md  working-patterns.md
docs/superpowers/plans/: 2026-04-26-tts-attachment-pipeline-telegram.md  2026-04-26-tts-channel-gating.md
docs/superpowers/specs/: 2026-04-26-tts-channel-gating-design.md
scripts/: check_antipatterns.py  lint.sh  sync-to-yuri.sh
src/nanobot_runtime/: __init__.py  gateway.py  launcher.py
src/nanobot_runtime/channels/: __init__.py  desktop_mate.py  desktop_mate_base.py  desktop_mate_config.py  desktop_mate_image.py  desktop_mate_protocol.py  desktop_mate_rest.py  desktop_mate_server.py  desktop_mate_tts.py
src/nanobot_runtime/clients/: __init__.py  desktop_mate_rest.py  irodori.py  ltm.py
src/nanobot_runtime/config/: __init__.py  desktop_mate.py  idle.py
src/nanobot_runtime/core/: __init__.py  error_classifier.py  logger.py
src/nanobot_runtime/hooks/: __init__.py  ltm_args.py  ltm_client.py  ltm_consolidator.py  ltm_injection.py  tts.py
src/nanobot_runtime/models/: __init__.py  desktop_mate.py
src/nanobot_runtime/proactive/: __init__.py  idle.py
src/nanobot_runtime/services/: __init__.py
src/nanobot_runtime/tts/: __init__.py  chunker.py  emotion_mapper.py  irodori.py  preprocessor.py
tests/: test_launcher.py  test_ltm_args.py  test_ltm_client_integration.py  test_ltm_consolidator.py  test_ltm_injection.py  test_tts_hook.py
tests/channels/: test_desktop_mate.py  test_desktop_mate_images.py  test_desktop_mate_protocol.py  test_desktop_mate_rest.py  test_gateway_sm_injection.py  test_integration.py  test_tts_sink_wiring.py
tests/clients/: test_desktop_mate_rest.py  test_irodori.py  test_ltm_integration.py
tests/e2e/: README.md  conftest.py  test_live_scenarios.py
tests/models/: test_desktop_mate.py
tests/proactive/: test_idle.py  test_idle_integration.py
tests/regression/: harness.py  test_scenarios.py
tests/services/channels/: test_desktop_mate.py  test_desktop_mate_images.py  test_desktop_mate_rest.py  (+3 more)
tests/tts/: test_chunker.py  test_emotion_mapper.py  test_irodori.py  test_preprocessor.py
(+40 files in other folders)
