[project]
name = "nanobot-runtime"
version = "0.1.0"
description = "Shared runtime glue for nanobot workspaces: AgentLoop hooks, gateway launcher, LTM plumbing"
requires-python = ">=3.12"

dependencies = [
    "nanobot-ai>=0.1.5.post1",
    "fastmcp>=2.0",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running ltm-mcp server",
]
addopts = "-m 'not integration'"
